# open.mp-capi

./: CMakeLists.txt  README.md
apidocs/: api.json  events.json
include/: ompcapi.h
tools/: generate_docs.js  generate_single_header.js
